# RustyVBA

./: .gitignore  Cargo.toml  LICENSE  README.md  rusty_vba.bas
core/: Cargo.toml
core/src/: from_vba.rs  lib.rs
core/src/datatype/: mod.rs  string.rs
dll_finder/: Cargo.toml
dll_finder/src/: lib.rs
dll_interface/: Cargo.toml
dll_interface/src/: lib.rs
dll_loader/: Cargo.toml
dll_loader/src/: lib.rs
dynamic_library/: Cargo.toml
dynamic_library/src/: lib.rs
example_cartesian_product/: Cargo.toml
example_cartesian_product/src/: lib.rs
example_dll/: Cargo.toml
example_dll/src/: lib.rs
from_vba/: Cargo.toml
from_vba/src/: lib.rs
global_resource/: Cargo.toml
global_resource/src/: lib.rs
src/: datatype.rs  from_vba.rs  lib.rs
src/datatype/: mod.rs  string.rs
vba_ribbon_creator/: Cargo.toml
vba_ribbon_creator/src/: lib.rs  rusty_vba_icon_rels.xml  rusty_vba_ui.xml
vba_script_generator/: Cargo.toml
vba_script_generator/src/: main.rs  template_rusty_vba.bas
