[package]
name = "rusty_vba"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[workspace]
members = [
    "core", "dll_finder", "dll_interface", 
    "dll_loader", "dynamic_library", "example_cartesian_product", "example_dll", "from_vba", "global_resource", "vba_ribbon_creator", "vba_script_generator",
]

[workspace.dependencies]
core = { path = "./core" }
dll_finder = { path = "./dll_finder" }
dll_interface = { path = "./dll_interface" }
dll_loader = { path = "./dll_loader" }
global_resource = { path = "./global_resource" }
dynamic_library = { path = "./dynamic_library" }
vba_ribbon_creator = { path = "./vba_ribbon_creator" }
rusqlite = { version = "0.37", features = ["bundled"]}


[dependencies]
core.workspace = true
core.optional = true
dll_finder.workspace = true
dll_finder.optional = true
dll_interface.workspace = true
dll_interface.optional = true
dll_loader.workspace = true
dll_loader.optional = true
global_resource.workspace = true
global_resource.optional = true
dynamic_library.workspace = true
dynamic_library.optional = true